# opcua-server

./: .check-dependencies  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  EDDLFile_1.ddl  README.md  arm-linux-toolchain.cmake  asnegPatch.txt  opcua-build-arm-debug.sh  opcua-build-arm-release.sh  opcua-build-arm.sh  opcua-build-binaries.sh  opcua-build-x86-amd64-debug.sh  opcua-build-x86-amd64-release.sh  opcua-build-x86-amd64.sh  opcua-build.sh  opcua-run-arm-debug.sh  opcua-run-arm-release.sh  opcua-run-x86-amd64-debug.sh  opcua-run-x86-amd64-release.sh  opcua-run.sh  opcua.code-workspace  readMe.html  readMe.txt  x86-amd64-linux-toolchain.cmake
.gitlab/issue_templates/: Bug.md  Crash_Report.md  Feature.md  Task.md
Amelis-XMLS/cfg/etc/OpcUaStack/: OpcUaServer.xml
Amelis-XMLS/cfg/etc/OpcUaStack/Nodes/: ApplicationConfigStatus.xml  BMA255_Signal_1000Hz.xml  BMA255_Signal_250Hz.xml  BMA255_Signal_500Hz.xml  BMA255_Signal_750Hz.xml  BMA255_Signal_unfiltered.xml  BMA255_Spectrum_1000Hz.xml  BMA255_Spectrum_250Hz.xml  BMA255_Spectrum_500Hz.xml  BMA255_Spectrum_750Hz.xml  BMA255_Spectrum_unfiltered.xml  Barometer.xml  Belt_Temsion.xml  EIS.xml  Grind_Sharpness.xml  Humidity.xml  Illuminance.xml  Maintenance.xml  Power.xml  SMB470_Signal_10kHz.xml  SMB470_Signal_20kHz.xml  SMB470_Signal_31250kHz.xml  SMB470_Signal_5kHz.xml  SMB470_Signal_unfiltered.xml  SMB470_Spectrum_10kHz.xml  SMB470_Spectrum_20kHz.xml  SMB470_Spectrum_31250kHz.xml  SMB470_Spectrum_5kHz.xml  SMB470_Spectrum_unfiltered.xml  Temperature.xml  Voltage.xml  dbConfig.xml  ipsoConfig.xml
NIKI_eddl_opcua/: CMakeLists.txt  EddlOpcUaMapping.h  EddlParser.cpp  EddlParser.h  EddlParserStruct.h  EddlParserUtils.h  OpcUaEddlLib.cpp  OpcUaEddlLib.h
Parsifal-XMLS/cfg/etc/OpcUaStack/: OpcUaServerConfig.xml
Parsifal-XMLS/cfg/etc/OpcUaStack/Nodes/: Barometer.xml  EIS-Values.xml  Illuminance.xml  NIKI-Current-Sensor.xml  NIKI-Temp-Sensor.ddl  NIKI-Temp-Sensor.xml  Parsifal_10002.xml  Parsifal_10005.xml  Parsifal_10006.xml  Parsifal_10007.xml  Parsifal_10008.xml  Parsifal_10010.xml  Parsifal_10011.xml  Parsifal_10013.xml  Parsifal_10014.xml  Parsifal_3301.xml  Parsifal_3303.xml  Parsifal_3304.xml  Parsifal_3315.xml  Voltage.xml  ipsoConfig.xml  (+2 more)
asneg-db-server/: README.md
asneg-db-server/OpcUaDB/doc/doxygen/: Doxyfile
asneg-db-server/OpcUaDB/src/: CMakeLists.txt  README
asneg-db-server/OpcUaDB/src/OpcUaDB/: CMakeLists.txt
asneg-db-server/OpcUaDB/src/OpcUaDB/Config/: DBModel.xml  Opc.Ua.DB.NodeSet.xml  OpcUaServer.xml
asneg-db-server/OpcUaDB/src/OpcUaDB/DBServer/: DBModelConfig.cpp  DBModelConfig.h  DBServer.cpp  DBServer.h  DatabaseConfig.cpp  DatabaseConfig.h  OpcUaAccessConfig.cpp  OpcUaAccessConfig.h
asneg-db-server/OpcUaDB/src/OpcUaDB/linux/etc/init/: OpcUaDB.conf.in
asneg-db-server/OpcUaDB/src/OpcUaDB/linux/etc/init.d/: OpcUaDB.in
asneg-db-server/OpcUaDB/src/OpcUaDB/linux/script/: postinst  prerm
asneg-db-server/OpcUaDB/src/OpcUaDB/linux/usr/lib/systemd/system/: OpcUaDB.service.in
asneg-db-server/OpcUaDB/src/OpcUaDB/odbc/: Connection.cpp  Connection.h
asneg-db-server/OpcUaDB/test/mysql/: README  TestData.sql
asneg-db-server/OpcUaDB/test/postgresql/: TestData.sql  TestDataDelete.sql  TestDataInsert.sql  TestDataSelect.sql  postgres.sql
asneg-db-server/OpcUaDB/ua/: dbserver.tt2pro  dbserver.ua
cfg/etc/OpcUaStack/: OpcUaServer.xml  OpcUaServerConfig.xml
cfg/etc/OpcUaStack/Nodes/: Barometer.xml  BarometerConfig.xml  Current.xml  CurrentConfig.xml  EDDLFile1_Config.xml  EDDLFile2_Config.xml  EDDLFile_2.ddl  EIS.xml  EMeter-Values.xml  Humidity.xml  HumidityConfig.xml  Illuminance.xml  NIKI-Current-Sensor.ddl  Power.xml  PowerConfig.xml  Temperature.xml  TemperatureConfig.xml  Voltage.xml  VoltageConfig.xml  dbConfig.xml  deviceObject.xml  ipsoConfig.xml  ipsoSensor.xml  ipsoWakaamaTestObj.xml
cfg/etc/OpcUaStack/OpcUaStack/: EDDLFile1_Config.xml  EDDLFile2_Config.xml  OpcUaServer.xml
etc/OpcUaStack/: OpcUaServer.xml
etc/OpcUaStack/Nodes/: Barometer.xml  EISConfig.xml  IlluminanceConfig.xml  Temperature.xml  ipsoConfig.xml
niki/: EddlParser.cpp  EddlParser.h
niki/asneg-dbserver/: CMakeLists.txt  NikiDatabaseConfig.cpp  NikiDatabaseConfig.h  NikiDatabaseServer.cpp  NikiDatabaseServer.h  NikiDbModelConfig.cpp  NikiDbModelConfig.h
niki/eddl/: CMakeLists.txt  EddlOpcUaMapping.h  EddlParser.cpp  EddlParser.h  EddlParserStruct.h  EddlParserUtils.h  OpcUaEddlLib.cpp  OpcUaEddlLib.h
niki/gateway/helpers/Dependency Installers/: boost-build.sh  dependency_installer.sh  odbc-build.sh  openssl-build-arm.sh
niki/gateway/helpers/Dependency_Installers/: dependency_installer.sh  odbc-build.sh  odbc.ini
niki/gateway/helpers/Gateway_installer_builder/: .builder.sh.swp  add_libs_and_clean_up_files.sh  builder.sh
niki/gateway/helpers/gateway-installer/: niki-gateway-installer.sh
niki/ipso/: CMakeLists.txt  IPSOParser.cpp  IPSOParser.h  OpcUaIPSOLib.cpp  OpcUaIPSOLib.h  OpcUaLWM2MLib.cpp  OpcUaLWM2MLib.h  OpcUaLWM2MObserver.cpp  OpcUaLWM2MObserver.h
niki/logger/: CMakeLists.txt  Logger.cpp  Logger.h  NikiLogger.cpp  NikiLogger.h
opcua-eddl/: ConfigEDDL.cpp  ConfigEDDL.h
opcua-plugin/database/: CMakeLists.txt  opcuaDatabaseConfig.cpp  opcuaDatabaseConfig.h  opcuaDatabaseServer.cpp  opcuaDatabaseServer.h  opcuaDbModelConfig.cpp  opcuaDbModelConfig.h
opcua-plugin/eddl/: CMakeLists.txt  EddlOpcUaMapping.h  EddlParser.cpp  EddlParser.h  EddlParserStruct.h  EddlParserUtils.h  OpcUaEddlLib.cpp  OpcUaEddlLib.h
opcua-plugin/gateway/helpers/Dependency_Installers/: boost-build.sh  dependency_installer.sh  odbc-build.sh  odbc.ini  odbcinst.ini
opcua-plugin/gateway/helpers/Gateway_installer_builder/: TODO  add_libs_and_clean_up_files.sh  add_libs_and_clean_up_files_for_debug.sh  buildDebug_arm_1_54_0.sh  buildRelease_arm_1_54_0.sh  builder.sh
opcua-plugin/gateway/helpers/gateway-installer/: README.md
opcua-plugin/gateway/helpers/opcua_packager/: packageOPCUA.sh
opcua-plugin/ipso/: CMakeLists.txt  IPSOParser.cpp  OpcUaLWM2MLib.cpp  OpcUaLWM2MLib.h
opcua-plugin/logger/: CMakeLists.txt
(+22 files in other folders)
